# ability-system-py-proto

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yml  test.yml
py_ability_proto/: main.py
py_ability_proto/abilities/: aoe_ability.py  base_ability.py
py_ability_proto/actors/: base_actor.py  moving_actor.py
py_ability_proto/entitiyComponentSystem/: system.py
src/: dummy_actor.py
src/abilities/: base.py
tests/: conftest.py
tests/abilities/: 01_base_ability_unittests.py  test_01_base_ability_unittests.py
tests/coverage/: d_5da6d70e0c2fd798_base_ability_py.html  d_971f512ca5442405_system_py.html  d_cb7d60a305ab5f35_base_actor_py.html  d_e607f59fc84a4c19___init___py.html  d_e607f59fc84a4c19_main_py.html  index.html  status.json
